# actor-llmstxt-generator

./: .dockerignore  .gitignore  Makefile  README.md  pyproject.toml
.actor/: Dockerfile  actor.json  dataset_schema.json  input_schema.json
.github/workflows/: master.yml
src/: __main__.py  crawler_config.py  helpers.py  main.py  mytypes.py  renderer.py  types.py
tests/: test_helpers.py  test_html.py  test_renderer.py  tests.py
